<resources>
    <string name="app_name">Calculator!! >:0</string>
    <string name="n01">1</string>
    <string name="n02">2</string>
    <string name="n03">3</string>
    <string name="n04">4</string>
    <string name="n05">5</string>
    <string name="n06">6</string>
    <string name="n07">7</string>
    <string name="n08">8</string>
    <string name="n09">9</string>
    <string name="n00">0</string>
    <string name="bDec">.</string>
    <string name="bAdd">+</string>
    <string name="bSub">-</string>
    <string name="bMul">*</string>
    <string name="bDiv">/</string>
    <string name="bClr">CLEAR!!</string>
    <string name="bBck">Back</string>
    <string name="bEql">=</string>
    <string name="num02">2</string>
    <string name="bPlus">+</string>
    <string name="bPMn">+/-</string>
</resources>
