<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.matt.assignment_01.Calculator">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <Button
            android:id="@+id/btn01Num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/n01" />

        <Button
            android:id="@+id/b2n02Num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btn01Num"
            android:layout_alignBottom="@+id/btn01Num"
            android:layout_toEndOf="@+id/btn01Num"
            android:text="@string/n02" />

        <Button
            android:id="@+id/btn03Num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/b2n02Num"
            android:layout_alignBottom="@+id/b2n02Num"
            android:layout_toEndOf="@+id/b2n02Num"
            android:text="@string/n03" />

        <Button
            android:id="@+id/btn04Num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/btn01Num"
            android:layout_below="@+id/btn01Num"
            android:layout_marginTop="15dp"
            android:text="@string/n04" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/btn03Num"
            android:text="@string/bAdd" />

        <Button
            android:id="@+id/btn05Num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btn04Num"
            android:layout_toEndOf="@+id/btn04Num"
            android:text="@string/n05" />

        <Button
            android:id="@+id/btn06Num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btn05Num"
            android:layout_toEndOf="@+id/btn05Num"
            android:text="@string/n06" />

        <Button
            android:id="@+id/btn07Num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/btn04Num"
            android:layout_marginTop="15dp"
            android:text="@string/n07" />

        <Button
            android:id="@+id/btn08Num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btn07Num"
            android:layout_toEndOf="@+id/btn07Num"
            android:text="@string/n08" />

        <Button
            android:id="@+id/btn09Num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/btn06Num"
            android:layout_alignTop="@+id/btn08Num"
            android:text="@string/n09" />

        <Button
            android:id="@+id/btn00Num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/btn07Num"
            android:layout_marginTop="16dp"
            android:text="@string/n00" />

        <Button
            android:id="@+id/btnDec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btn00Num"
            android:layout_toEndOf="@+id/btn00Num"
            android:text="@string/bDec" />

        <Button
            android:id="@+id/btnSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/btnAdd"
            android:layout_alignTop="@+id/btn06Num"
            android:text="@string/bSub" />

        <Button
            android:id="@+id/btnMul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btn09Num"
            android:layout_alignStart="@+id/btnSub"
            android:text="@string/bMul" />

        <Button
            android:id="@+id/btnDiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/btnDec"
            android:text="@string/bDiv" />

        <Button
            android:id="@+id/btnClr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnAdd"
            android:layout_alignStart="@+id/btnAdd"
            android:layout_marginBottom="15dp"
            android:text="@string/bClr" />

        <Button
            android:id="@+id/btnBck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btnClr"
            android:layout_toEndOf="@+id/b2n02Num"
            android:text="@string/bBck" />

        <TextView
            android:id="@+id/txtScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnBck"
            android:layout_alignStart="@+id/btnBck"
            android:layout_marginBottom="20dp"
            android:text="TextView" />

        <Button
            android:id="@+id/btnEql"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btnDec"
            android:layout_toEndOf="@+id/btnDec"
            android:text="@string/bEql" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
